--- a/index.html
+++ b/index.html
@@ -1,1 +1,107 @@
+<!doctype html>
+<html lang="pt-BR">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Key System</title>
+  <style>
+    :root{
+      --bg:#0f1724; --card:#0b1220; --accent:#7c3aed; --muted:#94a3b8; --text:#e6eef8;
+    }
+    *{box-sizing:border-box;font-family:Inter,ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial;}
+    body{margin:0;min-height:100vh;display:flex;align-items:center;justify-content:center;background:linear-gradient(180deg,#071029 0%, #081427 60%);color:var(--text);padding:24px;}
+    .card{width:100%;max-width:480px;background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border-radius:12px;padding:20px;border:1px solid rgba(255,255,255,0.04);box-shadow:0 10px 30px rgba(2,6,23,0.6);text-align:center}
+    h1{margin:0 0 12px;font-size:22px;}
+    .keybox{display:flex;gap:8px;align-items:center;margin-bottom:14px}
+    .key{flex:1;background:rgba(255,255,255,0.05);padding:14px;border-radius:8px;font-family:monospace;font-size:18px;word-break:break-all;cursor:pointer}
+    button{background:var(--accent);border:0;padding:10px 14px;border-radius:8px;color:white;cursor:pointer;font-weight:600}
+    .meta{margin-top:12px;color:var(--muted);font-size:14px}
+    .meta strong{color:var(--text)}
+  </style>
+</head>
+<body>
+  <div style="text-align">Made By ZenithExility
+  <div class="card">
+    <h1>Key:</h1>
+    <div class="keybox">
+      <div id="key" class="key" aria-live="polite">-- gerando --</div>
+      <button id="copyBtn">copy</button>
+    </div>
+    <div class="meta">
+      Reset in: <strong id="countdown">--:--:--</strong> | <strong> reset every 00:00 utc  </strong>
+    </div>
+  </div>
+ <script>
+const keyEl = document.getElementById("key");
+const copyBtn = document.getElementById("copyBtn");
+const countdownEl = document.getElementById("countdown");
 
+function randomHex(n) {
+  const chars = '0123456789abcdef';
+  let str = '';
+  for (let i = 0; i < n; i++) {
+    str += chars[Math.floor(Math.random() * chars.length)];
+  }
+  return str;
+}
+
+function gerarKey() {
+  const hoje = new Date();
+  const seed = hoje.getUTCDate() + hoje.getUTCMonth() + hoje.getUTCFullYear();
+  let s = seed % 2147483647;
+  function seededRandom() {
+    s = (s * 16807) % 2147483647;
+    return (s - 1) / 2147483646;
+  }
+  Math.random = seededRandom;
+  const part1 = randomHex(4);
+  const part2 = randomHex(4);
+  const part3 = randomHex(4);
+  const part4 = randomHex(4);
+  return `LKZh-${part1}-${part2}-${part3}-${part4}`;
+}
+
+function updateKey() {
+  keyEl.textContent = gerarKey();
+}
+
+copyBtn.onclick = async () => {
+  try {
+    await navigator.clipboard.writeText(keyEl.textContent);
+    copyBtn.textContent = "Copied!";
+    setTimeout(() => copyBtn.textContent = "copy", 1200);
+  } catch {
+    alert("Falha ao copiar: " + keyEl.textContent);
+  }
+}
+
+keyEl.addEventListener('click', () => {
+  navigator.clipboard.writeText(keyEl.textContent).then(() => {
+    alert(`Key "${keyEl.textContent}" copiada para a área de transferência!`);
+  });
+});
+
+function formatTime(ms) {
+  if(ms<0) ms=0;
+  const s=Math.floor(ms/1000),
+        h=Math.floor(s/3600),
+        m=Math.floor((s%3600)/60),
+        ss=s%60;
+  return `${h.toString().padStart(2,"0")}:${m.toString().padStart(2,"0")}:${ss.toString().padStart(2,"0")}`;
+}
+
+function updateCountdown() {
+  const now = new Date();
+  const utcMidnight = new Date(Date.UTC(now.getUTCFullYear(), now.getUTCMonth(), now.getUTCDate() + 1, 0, 0, 0));
+  countdownEl.textContent = formatTime(utcMidnight - now);
+}
+
+updateKey();
+updateCountdown();
+setInterval(() => {
+  updateCountdown();
+  updateKey(); 
+}, 1000);
+</script>
+</body>
+</html>
