--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ function gerarKey() {
   const part2 = randomHex(4);
   const part3 = randomHex(4);
   const part4 = randomHex(4);
-  return `LKZh-${part1}-${part2}-${part3}-${part4}`;
+  return `ZNK-${part1}-${part2}-${part3}-${part4}`;
 }
 
 function updateKey() {
